Fix line wrapping in PR when file name is long (#1012)

--- a/web/src/components/DiffViewer/DiffViewer.module.scss
+++ b/web/src/components/DiffViewer/DiffViewer.module.scss
@@ -234,6 +234,10 @@
     box-shadow: 0px 2px 4px 0px rgba(96, 97, 112, 0.16), 0px 0px 1px 0px rgba(40, 41, 61, 0.04);
     z-index: 4;
 
+    .fnamePopover {
+      display: flex;
+    }
+
     .chevron {
       align-self: center;
       height: 24px;
@@ -244,6 +248,7 @@
       align-self: center;
       align-items: center;
       text-align: left;
+      max-width: calc(100vw - 600px);
 
       a {
         font-size: 13px;
@@ -359,6 +364,16 @@
     // Harness Nav1.0 / Sidebar is collapsed
     &.sidebarCollapsed {
       max-width: max(100vw - 188px, 960px);
+    }
+  }
+}
+
+.popover {
+  :global {
+    .bp3-popover-content {
+      padding: var(--spacing-medium);
+      max-width: 700px;
+      word-break: break-all;
     }
   }
 }
